--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       width: 100%;
       height: 2rem;
       padding: 2px;
-      color: #d4d4d4f7
+      color: #e7e7e7;
     }
 
     .Welcome:hover{
@@ -86,7 +86,7 @@
       padding: 2px;
       border-radius: 0.3rem;
       cursor: pointer;
-      color: #d4d4d4f7
+      color: #e7e7e7;
     }
 
     .BF:hover{
@@ -105,7 +105,7 @@
       width: 100%;
       height: 2rem;
       padding: 2px;
-      color: #d4d4d4f7;
+      color: #e7e7e7;
       cursor: pointer;
     }
 
@@ -126,7 +126,7 @@
       width: 100%;
       height: 2rem;
       padding: 4px;
-      color: #d4d4d4f7;
+      color: #e7e7e7;
       border-radius: 0.3rem;
       margin-top: 0.65rem;
       margin-left: 0.5rem;
@@ -143,14 +143,13 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #0a086cfd;
+                 background: #0d3490;
                  width: 100%;
                  height: 80px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-top: 0.2rem solid #07b0ff;
           }
           
           .myDiv{
@@ -422,17 +421,17 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: #9e0e4062;
+        background: #9e0e4058;
     }
 
     .content0{
       display: grid;
         grid-template-columns: 1fr;
-        justify-content: center;
+        justify-content: space-between;
         justify-items: center;
             width: 100%;
             height: 465px;
-            background: #9e0e4062;
+            background: #9e0e4058;
     }
 
     .KonTenT0{
@@ -443,11 +442,11 @@
             width: 84.2%;
             height: 380px;
             padding: 25px;
-            color: #b8b6b6fa;
+            color: #d6d6d6fa;
             font-size: 1.36rem;
             line-height: 34px;
             font-family: 'georgia';
-            background: #9e0e40fe;
+            background: #9e0e40;
             border-radius: 0.15rem;
             text-align: justify;
             margin-top: 2.6rem;
@@ -1520,7 +1519,7 @@ font-size: 18px;
     
     }
     ::-webkit-scrollbar-track-piece{
-        background: #fff;
+        background: #9e0e4038;
         cursor: pointer;
   
     }
@@ -1813,7 +1812,7 @@ font-size: 18px;
     border-radius: 50%;
     color: yellow;
     font-family: 'arial narrow';
-    font-size: 12.95px;
+    font-size: 12.9px;
     padding: 2px;
     background: orangered;
     margin-top: -7px;
@@ -2548,7 +2547,7 @@ font-size: 18px;
                       <a href="https://randomactsofflowers.org/guest-blog-magic-healing-power-flowers-katie-hess-lotuswei/" target="_blank">
                       <div class="VerTiWA">
                       <h1> What Is The Power of Flower in Health Care ?</h1>
-                      Since Antiquity people have explored many ways to use plants especially flowers to heal, getting a well-being, strenghten their mental states. And may be that has led to the invention of nowadays medecinal drugs
+                      Since Antiquity human-being has explored many ways to use plants especially flowers to heal, getting a well-being, strenghten their minds. This has led to the invention of modern medecinal drugs.
                     </div>
                   </a>
 
