--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #0d3490;
+                 background: #0b258c;
                  width: 100%;
                  height: 80px;
                  object-fit: cover;
