--- a/index.html
+++ b/index.html
@@ -1355,10 +1355,10 @@ font-size: 20px;
 }
 
 .HPT{
-  background: transparent;
-  color: #d2d2d2;
-  font-family: 'Poppins';
-  font-size: 17.23px;
+  background: #9e0e40e4;
+  color: rgba(236, 201, 1, 0.985);
+  font-family: 'georgia';
+  font-size: 15px;
   width: auto;
   height: 125px;
   padding: 5px;
@@ -1368,7 +1368,7 @@ font-size: 20px;
 }
 
 .HPT:hover{
-  color:#3b3b3bde;
+  color:#595959ea;
   background: #fff;
   transition: 0.2s ease-in;
   padding: 8px;
@@ -2533,10 +2533,11 @@ font-size: 18px;
                     </div>
 
                     <div class="HPT">
-                      We are all human-beings but we don't have the same status. We can have the same sickness [illness] but we don't have the same care. 
+                      We are all human-beings but we don't have the same status. We can have the same disease but we don't have the same care. 
                       Nowadays Healthcare is a Money Affair. 
                       But how do the people without any income or with low income including 
-                      disabled people will access to health care? Many have to wait in the suffering or die.</div>
+                      disabled people will access to health care? Many have to wait in the suffering or die.
+                    </div>
                   
                   </div>
 
