--- a/index.html
+++ b/index.html
@@ -1362,7 +1362,7 @@ font-size: 20px;
   width: auto;
   height: 125px;
   padding: 5px;
-  line-height: 19px;
+  line-height: 19.8px;
   margin-top: 7px;
   cursor: pointer;
 }
@@ -2534,9 +2534,9 @@ font-size: 18px;
 
                     <div class="HPT">
                       We are all human-beings but we don't have the same status. We can have the same disease but we don't have the same care. 
-                      Nowadays Healthcare is a Money Affair. 
+                      Nowadays Healthcare is trending to become a Money Affair. 
                       But how do the people without any income or with low income including 
-                      disabled people will access to health care? Many have to wait in the suffering or die.
+                      disabled people access to health care? Many have to wait in the suffering or die.
                     </div>
                   
                   </div>
