--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         object-fit: cover;
         font-family: 'georgia';
         font-size: 0.76rem;
-        color: rgb(219, 166, 32);
+        color: rgb(226, 170, 28);
         background: #9e0e40;
     }
 
@@ -69,7 +69,7 @@
     }
 
     .Welcome:hover{
-      background: #040404;
+      background: #0b2383;;
       color: rgb(255, 193, 36);
       transition: 0.1s linear;
       border: 0.1rem solid rgb(255, 193, 36);
@@ -90,7 +90,7 @@
     }
 
     .BF:hover{
-      background: #040404;
+      background: #0b2383;;
       color: rgb(255, 193, 36);
       transition: 0.1s linear;
       border: 0.1rem solid rgb(255, 193, 36);
@@ -110,7 +110,7 @@
     }
 
     .Asso:hover{
-      background: #040404;
+      background: #0b2383;;
       color: rgb(255, 193, 36);
       transition: 0.1s linear;
       border: 0.1rem solid rgb(255, 193, 36);
@@ -133,7 +133,7 @@
     }
 
     .datime:hover{
-      background: #0a086cf9;
+      background: #0b2383;;
       color: rgb(255, 193, 36);
       transition: 0.1s linear;
     }
@@ -143,7 +143,7 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #0b258c;
+                 background: #0b2383;
                  width: 100%;
                  height: 80px;
                  object-fit: cover;
