--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: #9e0e4058;
+        background: #9e0e404d;
     }
 
     .content0{
@@ -431,7 +431,7 @@
         justify-items: center;
             width: 100%;
             height: 465px;
-            background: #9e0e4058;
+            background: #9e0e404d;
     }
 
     .KonTenT0{
@@ -446,7 +446,7 @@
             font-size: 1.36rem;
             line-height: 34px;
             font-family: 'georgia';
-            background: #9e0e40;
+            background: #9e0e40f3;
             border-radius: 0.15rem;
             text-align: justify;
             margin-top: 2.6rem;
@@ -455,8 +455,8 @@
     }
 
     .KonTenT0:hover{
-      background: #800b34;
-      color: #c6c6c6fd;
+      background: #9a0e3f;
+      color: #cac9c9fd;
       transition: 0.2s ease-in;
     }
     .content1{
