--- a/index.html
+++ b/index.html
@@ -1355,14 +1355,14 @@ font-size: 20px;
 }
 
 .HPT{
-  background: #9e0e40e4;
-  color: rgba(236, 201, 1, 0.985);
+  background: #9e0e40de;
+  color: rgb(229, 195, 1);
   font-family: 'georgia';
-  font-size: 15px;
+  font-size: 14px;
   width: auto;
   height: 125px;
   padding: 5px;
-  line-height: 19.8px;
+  line-height: 19px;
   margin-top: 7px;
   cursor: pointer;
 }
@@ -1371,7 +1371,7 @@ font-size: 20px;
   color:#595959ea;
   background: #fff;
   transition: 0.2s ease-in;
-  padding: 8px;
+  padding: 5px;
   border-radius: 0.5rem;
 }
 
