--- a/index.html
+++ b/index.html
@@ -1356,7 +1356,7 @@ font-size: 20px;
 
 .HPT{
   background: #9e0e40de;
-  color: rgb(229, 195, 1);
+  color: rgba(3, 200, 255, 0.991);
   font-family: 'georgia';
   font-size: 14px;
   width: auto;
