--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     }
 
     .Welcome:hover{
-      background: #0b2383;;
+      background: #0b2383;
       color: rgb(255, 193, 36);
       transition: 0.1s linear;
       border: 0.1rem solid rgb(255, 193, 36);
@@ -90,7 +90,7 @@
     }
 
     .BF:hover{
-      background: #0b2383;;
+      background: #0b2383;
       color: rgb(255, 193, 36);
       transition: 0.1s linear;
       border: 0.1rem solid rgb(255, 193, 36);
@@ -110,7 +110,7 @@
     }
 
     .Asso:hover{
-      background: #0b2383;;
+      background: #0b2383;
       color: rgb(255, 193, 36);
       transition: 0.1s linear;
       border: 0.1rem solid rgb(255, 193, 36);
@@ -133,7 +133,7 @@
     }
 
     .datime:hover{
-      background: #0b2383;;
+      background: #0b2383;
       color: rgb(255, 193, 36);
       transition: 0.1s linear;
     }
@@ -143,9 +143,9 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #0b2383;
+                 background: #0d237d;
                  width: 100%;
-                 height: 80px;
+                 height: 75px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
@@ -1356,7 +1356,7 @@ font-size: 20px;
 
 .HPT{
   background: #9e0e40de;
-  color: rgba(3, 200, 255, 0.991);
+  color: rgba(0, 200, 255, 0.991);
   font-family: 'georgia';
   font-size: 14px;
   width: auto;
