--- a/index.html
+++ b/index.html
@@ -1357,15 +1357,16 @@ font-size: 20px;
 }
 
 .HPT{
-  background: #9e0e40de;
-  color: rgba(0, 200, 255, 0.991);
+  background: transparent;
+  color: rgba(22, 205, 255, 0.961);
   font-family: 'georgia';
   font-size: 14px;
   width: auto;
   height: 125px;
   padding: 5px;
-  line-height: 19px;
+  line-height: 19.5px;
   margin-top: 7px;
+  text-align: justify;
   cursor: pointer;
 }
 
@@ -2663,7 +2664,7 @@ font-size: 18px;
               <div class="footer1">
                 <figure>
                 <img src="https://www.zupimages.net/up/21/49/h8iv.jpg" alt="Champignon Ahuntsic">
-                <figcaption style="font-size: 17px; text-align: left; color: rgb(7, 172, 255);">A mushroom in Ahuntsic</figcaption>
+                <figcaption style="font-size: 17px; text-align: left; color: rgb(7, 172, 255);">A Mushroom</figcaption>
                 </figure>
               </div>
             </a>
