--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #0d237d;
+                 background: #0b227c;
                  width: 100%;
                  height: 75px;
                  object-fit: cover;
@@ -421,7 +421,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: #9e0e4045;
+        background: #9e14443e;
     }
 
     .content0{
@@ -431,7 +431,7 @@
         justify-items: center;
             width: 100%;
             height: 465px;
-            background: #9e0e4045;
+            background: #9e14443e;
     }
 
     .KonTenT0{
@@ -1522,7 +1522,7 @@ font-size: 18px;
     
     }
     ::-webkit-scrollbar-track-piece{
-        background: #9e0e4038;
+        background: #9e0e402a;
         cursor: pointer;
   
     }
