--- a/index.html
+++ b/index.html
@@ -2567,7 +2567,7 @@ font-size: 18px;
                   <figure>
                     <img src="https://www.zupimages.net/up/22/27/zf4p.jpg" alt="Red Flower">
                     <figcaption style="font-size: 16px; text-align: left; color: rgb(2, 165, 247);">
-                      A Multicolored Flower Shining to Summer
+                      A Multicolored Flower Shining Summertime
                     </figcaption>
                 </figure>
                   </div>
