--- a/index.html
+++ b/index.html
@@ -2316,7 +2316,7 @@ font-size: 18px;
 
               <figure>
                 <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="Drumming - BFA">
-                <figcaption style="color: rgb(8, 181, 255); margin-top: 3px;">Drumming is one of beloved activities for kids</figcaption>
+                <figcaption style="color: rgb(8, 181, 255); margin-top: 3px;">Drumming is one of the beloved activities for children</figcaption>
                 </figure>
 
               </div>
