--- a/index.html
+++ b/index.html
@@ -2550,7 +2550,7 @@ font-size: 18px;
                       <a href="https://randomactsofflowers.org/guest-blog-magic-healing-power-flowers-katie-hess-lotuswei/" target="_blank">
                       <div class="VerTiWA">
                       <h1> What Is The Power of Flower in Health Care ?</h1>
-                      Since Antiquity human-being has explored many ways to use plants especially flowers to heal, getting a well-being, strenghten their minds. This has led to the invention of modern medecinal drugs.
+                      Since Antiquity human-being has explored many ways to use plants especially flowers to heal, getting a well-being, strenghten their minds. This has led to the invention of modern medicinal drugs.
                     </div>
                   </a>
 
