--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
           }
 
           .myDiv1:hover{
-            border-bottom: 0.3rem solid rgb(255, 95, 37);
-      color: rgb(255, 95, 37);
+      border-bottom: 0.3rem solid #1fe5ff;
+      color: #1fe5ff;
       transition: 0.2s ease-in;
           }
 
@@ -232,8 +232,8 @@
           }
 
           .myDiv3:hover{
-            border-bottom: 0.3rem solid rgb(37, 255, 37);
-      color: rgb(37, 255, 37);
+            border-bottom: 0.3rem solid rgb(255, 151, 241);
+      color: rgb(255, 151, 241);
       transition: 0.2s ease-in;
           }
 
@@ -254,7 +254,7 @@
 
           .myDiv4:hover{
             border-bottom: 0.3rem solid rgb(255, 186, 209);
-      color: rgb(255, 186, 209);
+      color: #fff;
       transition: 0.2s ease-in;
           }
 
@@ -274,8 +274,8 @@
           }
 
           .myDiv5:hover{
-            border-bottom: 0.3rem solid rgb(59, 131, 255);
-      color: rgb(59, 131, 255);
+            border-bottom: 0.3rem solid rgb(255, 95, 37);
+      color: rgb(255, 95, 37);
       transition: 0.2s ease-in;
           }
 
@@ -295,8 +295,8 @@
           }
 
           .myDiv4:hover{
-            border-bottom: 0.3rem solid #ff6a9e;
-      color: #ff6a9e;
+            border-bottom: 0.3rem solid #fff;
+      color: #fff;
       transition: 0.2s ease-in;
           }
 
@@ -316,8 +316,8 @@
           }
 
           .myDiv6:hover{
-            border-bottom: 0.3rem solid #1fe5ff;
-      color: #1fe5ff;
+      border-bottom: 0.3rem solid chartreuse;
+      color: chartreuse;
       transition: 0.2s ease-in;
       
           }
