--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #0b227c;
+                 background: #0d2583;
                  width: 100%;
                  height: 75px;
                  object-fit: cover;
@@ -442,12 +442,12 @@
             width: 84.2%;
             height: 380px;
             padding: 25px;
-            color: #d1d1d1fa;
+            color: #d7d6d6fa;
             font-size: 1.34rem;
             line-height: 30px;
             font-family: 'georgia';
-            background: #9e0e40f3;
-            border-radius: 0.15rem;
+            background: #9e0e40f2;
+            border-radius: 0.95rem;
             text-align: justify;
             margin-top: 2.6rem;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
@@ -1562,7 +1562,7 @@ font-size: 18px;
           height: 340px;
           background: #9e0e40;
           padding: 13px;
-          border-radius: 0.15rem;
+          border-radius: 0.95rem;
           font-size: 2.2rem;
           box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
           cursor: pointer;
