--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #0d2584;
+                 background: #1965b1;
                  width: 100%;
                  height: 75px;
                  object-fit: cover;
@@ -163,7 +163,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.3rem solid transparent;
-            color: #bbbbbb;
+            color: #c5c5c5;
             background: transparent;
           }
 
@@ -185,7 +185,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.3rem solid transparent;
-            color: #bbbbbb;
+            color: #c5c5c5;
             background: transparent;
           }
 
@@ -206,7 +206,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.3rem solid transparent;
-            color: #bbbbbb;
+            color: #c5c5c5;
             background: transparent;
           }
 
@@ -227,7 +227,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.3rem solid transparent;
-            color: #bbbbbb;
+            color: #c5c5c5;
             background: transparent;
           }
 
@@ -248,7 +248,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.3rem solid transparent;
-            color: #bbbbbb;
+            color: #c5c5c5;
             background: transparent;
           }
 
@@ -269,7 +269,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.3rem solid transparent;
-            color: #bbbbbb;
+            color: #c5c5c5;
             background: transparent;
           }
 
@@ -290,7 +290,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.3rem solid transparent;
-            color: #bbbbbb;
+            color: #c5c5c5;
             background: transparent;
           }
 
@@ -311,7 +311,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.3rem solid transparent;
-            color: #bbbbbb;
+            color: #c5c5c5;
             background: transparent;
           }
 
@@ -446,7 +446,7 @@
             font-size: 1.34rem;
             line-height: 30px;
             font-family: 'georgia';
-            background: #9e0e40f2;
+            background: #a90f45ea;
             border-radius: 0.95rem;
             text-align: justify;
             margin-top: 2.6rem;
@@ -1364,7 +1364,7 @@ font-size: 20px;
   width: auto;
   height: 125px;
   padding: 5px;
-  line-height: 19.5px;
+  line-height: 19px;
   margin-top: 7px;
   text-align: justify;
   cursor: pointer;
@@ -1374,7 +1374,7 @@ font-size: 20px;
   color:#595959ea;
   background: #fff;
   transition: 0.2s ease-in;
-  padding: 5px;
+  padding: 3.5px;
   border-radius: 0.5rem;
 }
 
@@ -2535,10 +2535,11 @@ font-size: 18px;
                     </div>
 
                     <div class="HPT">
-                      We are all human-beings but we don't have the same status. We can have the same disease but we don't have the same care. 
+                      We are all human-beings but we don't have the same status. 
+                      We can have the same disease but we do have neither the same doctor nor the same care. 
                       Nowadays Healthcare is trending to become a Money Affair. 
-                      But how do the people without any income or with low income including 
-                      disabled people access to health care? Many have to wait in the suffering or die.
+                      But how do the people without any income or with low income including disabled people will access to health care? 
+                      Many have to wait in a suffering state or die. 
                     </div>
                   
                   </div>
