--- a/index.html
+++ b/index.html
@@ -1812,11 +1812,11 @@ font-size: 18px;
     width: 60px;
     height: 55px;
     border-radius: 50%;
-    color: yellow;
+    color: gold;
     font-family: 'arial narrow';
     font-size: 12.9px;
     padding: 2px;
-    background: orangered;
+    background: #9e0e40f3;
     margin-top: -7px;
     margin-left: 4rem;
     cursor: pointer;
