--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         font-family: 'georgia';
         font-size: 0.76rem;
         color: rgb(226, 170, 28);
-        background: #9e0e40;
+        background: #9e0e40f3;
     }
 
     .Welcome{
@@ -446,7 +446,7 @@
             font-size: 1.34rem;
             line-height: 30px;
             font-family: 'georgia';
-            background: #a90f45ea;
+            background: #9e0e40f3;
             border-radius: 0.95rem;
             text-align: justify;
             margin-top: 2.6rem;
@@ -1610,6 +1610,7 @@ font-size: 18px;
         display: grid;
         grid-template-columns: 0.7fr 1.3fr;
         background: transparent;
+        border-top: 0.13rem solid #9e0e40f3;;
         color: #3b3a3af5;  
         font-family: 'Poppins';
         font-size: 1.4rem; 
