--- a/index.html
+++ b/index.html
@@ -1610,7 +1610,7 @@ font-size: 18px;
         display: grid;
         grid-template-columns: 0.7fr 1.3fr;
         background: transparent;
-        border-top: 0.13rem solid #9e0e40f3;;
+        border-top: 0.1px solid #9e0e40c9;
         color: #3b3a3af5;  
         font-family: 'Poppins';
         font-size: 1.4rem; 
@@ -1618,7 +1618,7 @@ font-size: 18px;
         justify-items: center;
         width: 100%;
         height: 2.47rem;
-        padding-top: 0.45rem;
+        padding-top: 0.4rem;
         padding-bottom: 0.45rem;
         word-spacing: 1px;
     }
