--- a/index.html
+++ b/index.html
@@ -151,6 +151,10 @@
                  top: 0;
                  position: sticky;
           }
+
+          .navbar:hover{
+            background: #1860a8;;
+          }
           
           .myDiv{
             display: flex;
