--- a/index.html
+++ b/index.html
@@ -1364,12 +1364,12 @@ font-size: 20px;
   background: transparent;
   color: rgba(22, 205, 255, 0.961);
   font-family: 'georgia';
-  font-size: 14px;
+  font-size: 13.45px;
   width: auto;
   height: 125px;
   padding: 5px;
-  line-height: 19px;
-  margin-top: 7px;
+  line-height: 17.25px;
+  margin-top: 5px;
   text-align: justify;
   cursor: pointer;
 }
@@ -1378,7 +1378,7 @@ font-size: 20px;
   color:#595959ea;
   background: #fff;
   transition: 0.2s ease-in;
-  padding: 3.5px;
+  padding: 4px;
   border-radius: 0.5rem;
 }
 
@@ -2543,8 +2543,8 @@ font-size: 18px;
                       We are all human-beings but we don't have the same status. 
                       We can have the same disease but we do have neither the same doctor nor the same care. 
                       Nowadays Healthcare is trending to become a Money Affair. 
-                      But how do the people without any income or with low income including disabled people will access to health care? 
-                      Many have to wait in a suffering state or die. 
+                      But how will the people without any income or with low income including disabled people access to health care? 
+                      Many of them have to wait in a suffering state or die. 
                     </div>
                   
                   </div>
