--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #1965b1;
+                 background: #1971b5;
                  width: 100%;
                  height: 75px;
                  object-fit: cover;
@@ -153,7 +153,7 @@
           }
 
           .navbar:hover{
-            background: #1860a8;;
+            background: #176aa9;
           }
           
           .myDiv{
@@ -1547,7 +1547,7 @@ font-size: 18px;
             height: 450px;
             justify-content: center;
             justify-items: center;
-            row-gap: 0.5rem;
+            row-gap: 0.25rem;
             font-family: 'georgia';
             font-size: 1.25rem;
             line-height: 30px;
