--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #1971b5;
+                 background: #1c74b7;
                  width: 100%;
-                 height: 75px;
+                 height: 70px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
@@ -153,7 +153,7 @@
           }
 
           .navbar:hover{
-            background: #176aa9;
+            background: #196ba9;
           }
           
           .myDiv{
@@ -1822,7 +1822,7 @@ font-size: 18px;
     font-size: 12.9px;
     padding: 2px;
     background: #9e0e40f3;
-    margin-top: -7px;
+    margin-top: -9px;
     margin-left: 4rem;
     cursor: pointer;
    }
