--- a/index.html
+++ b/index.html
@@ -143,17 +143,13 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #1c74b7;
+                 background: darkblue;
                  width: 100%;
                  height: 70px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-          }
-
-          .navbar:hover{
-            background: #196ba9;
           }
           
           .myDiv{
