--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
           }
 
           .myDiv4:hover{
-            border-bottom: 0.3rem solid #fff;
-      color: #fff;
+            border-bottom: 0.3rem solid rgb(255, 42, 42);
+      color: rgb(255, 42, 42);
       transition: 0.2s ease-in;
           }
 
