--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: #9e144435;
+        background: rgba(0, 0, 139, 0.632);
     }
 
     .content0{
@@ -431,7 +431,7 @@
         justify-items: center;
             width: 100%;
             height: 465px;
-            background: #9e144435;
+            background: rgba(0, 0, 139, 0.681);
     }
 
     .KonTenT0{
@@ -446,16 +446,15 @@
             font-size: 1.34rem;
             line-height: 30px;
             font-family: 'georgia';
-            background: #9e0e40f3;
+            background: transparent;
             border-radius: 0.95rem;
             text-align: justify;
             margin-top: 2.6rem;
-            box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
             cursor: pointer;
     }
 
     .KonTenT0:hover{
-      background: #9a0e3f;
+      background: darkblue;
       color: #cac9c9fd;
       transition: 0.2s ease-in;
     }
@@ -1547,8 +1546,8 @@ font-size: 18px;
             font-family: 'georgia';
             font-size: 1.25rem;
             line-height: 30px;
-            background: #9e144435;
-            color: #383838f6;  
+            background: rgba(0, 0, 139, 0.632);
+            color: #fff;  
             text-align: center; 
             padding: 10px;
         }
