--- a/index.html
+++ b/index.html
@@ -1520,7 +1520,7 @@ font-size: 18px;
     
     }
     ::-webkit-scrollbar-track-piece{
-        background: #9e0e402a;
+        background: rgba(1, 1, 203, 0.268);
         cursor: pointer;
   
     }
