--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@ border: 0.15px solid #8f8f8ff9;
 
           .Kontent{
             display: grid;
-            grid-template-columns: 360px 360px 360px;
+            grid-template-columns: 355px 355px 355px;
             justify-content: space-around;
             justify-items: center;
             padding: 0.9rem;
@@ -715,9 +715,9 @@ justify-items: center;
 width: 88%;
 height: 245px;
 padding: 10px;
-color: #c5c5c5ed;
-background: #bd114ddc;
-box-shadow: 0 0 0.25rem -0.25px rgba(192, 226, 224, 0.883);
+color: #cececeed;
+background: #c71252dc;
+box-shadow: 0 0 0.25rem -0.25px rgba(218, 243, 241, 0.883);
 border-radius: 1rem;
 font-family: 'georgia';
 font-size: 13px;
@@ -777,9 +777,9 @@ justify-items: center;
 width: 88%;
 height: 245px;
 padding: 10px;
-color: #c5c5c5ed;
-background: #bd114ddc;
-box-shadow: 0 0 0.25rem -0.25px rgba(192, 226, 224, 0.883);
+color: #cececeed;
+background: #c71252dc;
+box-shadow: 0 0 0.25rem -0.25px rgba(218, 243, 241, 0.883);
 border-radius: 1rem;
 font-family: 'georgia';
 font-size: 13px;
@@ -806,9 +806,9 @@ justify-items: center;
 width: 88%;
 height: 245px;
 padding: 10px;
-color: #c5c5c5ed;
-background: #bd114ddc;
-box-shadow: 0 0 0.25rem -0.25px rgba(192, 226, 224, 0.883);
+color: #cececeed;
+background: #c71252dc;
+box-shadow: 0 0 0.25rem -0.25px rgba(218, 243, 241, 0.883);
 border-radius: 1rem;
 font-family: 'georgia';
 font-size: 13px;
@@ -1354,25 +1354,30 @@ font-size: 20px;
 }
 
 .HPT{
-  background: transparent;
-  color: rgba(22, 205, 255, 0.961);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #cacaca;
+  background: #c31250dc;
+  border: 0.45px solid #8f8f8f;
+  border-radius: 0.5rem;
   font-family: 'georgia';
   font-size: 13.45px;
   width: auto;
-  height: 125px;
-  padding: 5px;
-  line-height: 17.25px;
-  margin-top: 5px;
+  height: 120px;
+  padding: 7px;
+  line-height: 17px;
   text-align: justify;
   cursor: pointer;
+  margin-top: 11px;
 }
 
 .HPT:hover{
-  color:#595959ea;
-  background: #fff;
+  color:#2e2e2ef5;
+  background: #f7f7f7;
   transition: 0.2s ease-in;
   padding: 4px;
-  border-radius: 0.5rem;
 }
 
 .navbar5{
@@ -1400,7 +1405,6 @@ font-size: 20px;
             transition: 0.17s ease-in;
             border: 0.15rem solid #000;
           }
-
 
           .content5{ display: grid;
             grid-template-columns: 1fr;
