--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         justify-items: center;
             width: 100%;
             height: 465px;
-            background: rgba(0, 0, 139, 0.633);
+            background: rgba(0, 0, 139, 0.619);
     }
 
     .KonTenT0{
@@ -1358,7 +1358,7 @@ font-size: 20px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: #cacaca;
+  color: #dcdcdc;
   background: #c31250dc;
   border: 0.45px solid #8f8f8f;
   border-radius: 0.5rem;
@@ -1528,8 +1528,8 @@ font-size: 18px;
   
     }
     ::-webkit-scrollbar-thumb{
-        background: -webkit-linear-gradient(rgb(56, 197, 245) 50%, rgb(255, 1, 1) 50%);
-        background: -moz-linear-gradient(rgb(56, 197, 245) 50%, rgb(255, 1, 1) 50%);
+        background: -webkit-linear-gradient(rgb(2, 179, 255) 50%, rgb(255, 3, 3) 50%);
+        background: -moz-linear-gradient(rgb(2, 179, 255)  50%, rgb(255, 3, 3) 50%);
     }
     ::-webkit-scrollbar-track-piece:hover{
         background: rgba(250, 250, 250, 0.937);
