--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         justify-items: center;
             width: 100%;
             height: 465px;
-            background: rgba(0, 0, 139, 0.619);
+            background: rgba(0, 0, 139, 0.648);
     }
 
     .KonTenT0{
@@ -715,9 +715,9 @@ justify-items: center;
 width: 88%;
 height: 245px;
 padding: 10px;
-color: #cececeed;
-background: #c71252dc;
-box-shadow: 0 0 0.25rem -0.25px rgba(218, 243, 241, 0.883);
+color: #dfdedeed;
+background: #d01355dc;
+box-shadow: 0 0 0.25rem -0.25px rgba(227, 253, 251, 0.883);
 border-radius: 1rem;
 font-family: 'georgia';
 font-size: 13px;
@@ -777,9 +777,9 @@ justify-items: center;
 width: 88%;
 height: 245px;
 padding: 10px;
-color: #cececeed;
-background: #c71252dc;
-box-shadow: 0 0 0.25rem -0.25px rgba(218, 243, 241, 0.883);
+color: #dfdedeed;
+background: #d01355dc;
+box-shadow: 0 0 0.25rem -0.25px rgba(227, 253, 251, 0.883);
 border-radius: 1rem;
 font-family: 'georgia';
 font-size: 13px;
@@ -806,9 +806,9 @@ justify-items: center;
 width: 88%;
 height: 245px;
 padding: 10px;
-color: #cececeed;
-background: #c71252dc;
-box-shadow: 0 0 0.25rem -0.25px rgba(218, 243, 241, 0.883);
+color: #dfdedeed;
+background: #d01355dc;
+box-shadow: 0 0 0.25rem -0.25px rgba(227, 253, 251, 0.883);
 border-radius: 1rem;
 font-family: 'georgia';
 font-size: 13px;
@@ -1043,9 +1043,9 @@ animation-delay: 5s;
   padding: 10px;
   border-radius: 0.5rem;
   transition: 0.2s ease-in;
-  color: #b0afaf;
-  background: #bd114ddc;
-  box-shadow: 0 0 0.25rem -0.25px rgba(191, 224, 222, 0.692);
+  color: #cecdcd;
+  background: #c41250dc;
+  box-shadow: 0 0 0.25rem 0.25px rgba(225, 249, 247, 0.89);
   cursor: pointer;
 }
 
@@ -1068,7 +1068,7 @@ padding: 10px;
 background: #7f0b33f6;
 color: gold;
 border-radius: 3rem;
-border: 0.15px solid #a0a0a0fe;
+border: 0.15px solid #939393f6;
 cursor: pointer;
 }
 
@@ -1088,7 +1088,7 @@ padding: 10px;
 background: #7f0b33f6;
 color: gold;
 border-radius: 3rem;
-border: 0.15px solid #a0a0a0fe;
+border: 0.15px solid #939393f6;
 cursor: pointer;
 }
 .DD:hover{
@@ -1107,7 +1107,7 @@ padding: 10px;
 background: #7f0b33f6;
 color: gold;
 border-radius: 3rem;
-border: 0.15px solid #a0a0a0fe;
+border: 0.15px solid #939393f6;
 cursor: pointer;
 }
 .DC:hover{
@@ -1479,12 +1479,12 @@ font-size: 20px;
   font-family: georgia;
   font-size: 27px;
   line-height: 29px;
-  color: #cacacadc;
+  color: #d5d5d5dc;
   padding: 20px;
-  border-radius: 0.2rem;
+  border-radius: 0.45rem;
   text-align: left;
-  background: #bd114ddc;
-  box-shadow: 0 0 0.25rem -0.25px rgba(191, 224, 222, 0.692);
+  background: #cc1354dc;
+  box-shadow: 0 0 0.25rem 0.25px rgba(212, 244, 241, 0.802);
 }
 
 .FooD:hover{
@@ -1499,23 +1499,23 @@ font-size: 20px;
   align-items: center;
   padding: 10px;
   width: auto;
-  height: 48px;
-  font-size: 19px;
+  height: 48.65px;
+  font-size: 18px;
 line-height: 14.25px;
-background: #7f0b33f6;
+background: #870c37f6;
 color: gold;
-border-radius: 3rem;
-border: 0.15px solid #8f8f8ff9;
+border-radius: 0.5rem;
+border: 0.75px solid #999898f9;
 margin-top: 1rem;
 }
 
 .SF:hover{ 
-background: #7f0b33f6;
+  background: #690a2ced;
 color: gold;
 border-radius: 3rem;
 border: 0.15px solid #8f8f8ff9;
 transition: 0.2s linear;
-font-size: 18px;
+font-size: 19px;
 }
     
     ::-webkit-scrollbar{
@@ -1815,9 +1815,9 @@ font-size: 18px;
     border-radius: 50%;
     color: gold;
     font-family: 'arial narrow';
-    font-size: 12.9px;
+    font-size: 13px;
     padding: 2px;
-    background: #d11456;
+    background: #b31049;
     margin-top: -9px;
     margin-left: 4rem;
     cursor: pointer;
@@ -2497,12 +2497,15 @@ font-size: 18px;
                     <div class="DC">
                     Volunteering
                     </div>
+
                        </div>
+
               <a href="https://www.education.gov.bf/accueil" target="_blank">
                 <div class="DiV2">
                 <b style="font-size: 23.8px; font-family: 'georgia'; line-height: 28.27px">The More The Rate of Education Get Higher, The More The Rate of Poverty Will Be Lower And The More the Index of Development Will Be Ascendant. That Highlights How Education Is Important and Stands as a Foundation for Nations to Implement a Sustainable Development.</b>
                 </div>
               </a>
+              
               </div>
 
               </div>
