--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         font-family: 'georgia';
         font-size: 0.76rem;
         color: gold;
-        background: #ae1047;
+        background: #000000e9;
     }
 
     .Welcome{
@@ -419,7 +419,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: rgba(1, 1, 203, 0.338);
+        background: rgba(1, 1, 203, 0.272);
     }
 
     .content0{
@@ -429,7 +429,7 @@
         justify-items: center;
             width: 100%;
             height: 465px;
-            background: rgba(0, 0, 139, 0.648);
+            background: rgba(0, 0, 139, 0.626);
     }
 
     .KonTenT0{
@@ -1547,7 +1547,7 @@ font-size: 19px;
             font-family: 'georgia';
             font-size: 1.25rem;
             line-height: 30px;
-            background: rgba(1, 1, 203, 0.338);
+            background: rgba(1, 1, 203, 0.272);
             color: #000;  
             text-align: center; 
             padding: 10px;
@@ -1610,8 +1610,7 @@ font-size: 19px;
         display: grid;
         grid-template-columns: 0.7fr 1.3fr;
         background: transparent;
-        border-top: 0.1px solid #9e0e40c9;
-        color: #3b3a3af5;  
+        color: #0e0e0ef5;  
         font-family: 'Poppins';
         font-size: 1.4rem; 
         justify-content: center;
