--- a/index.html
+++ b/index.html
@@ -123,20 +123,21 @@
     .datime{
       display: flex;
       position: relative;
-      flex-direction: column;
+      flex-direction: row;
       justify-content: center;
       align-items: center;
       width: 100%;
-      height: 1.5rem;
+      height: 1.7rem;
       padding: 2px;
       color: #e7e7e7;
-      border-radius: 0.3rem;
-      margin-top: 0.6rem;
-      margin-left: 0.5rem;
+      border-top-left-radius: 0.3rem;
+      border-bottom-left-radius: 0.3rem;
+      margin-top: 0.41rem;
+      margin-left: 0.45rem;
     }
 
     .datime:hover{
-      background: #0b2383;
+      background: darkblue;
       color: rgb(255, 193, 36);
       transition: 0.1s linear;
     }
@@ -432,7 +433,7 @@
         justify-items: center;
             width: 100%;
             height: 465px;
-            background: rgba(0, 0, 139, 0.626);
+            background: rgba(0, 0, 139, 0.62);
     }
 
     .KonTenT0{
@@ -443,7 +444,7 @@
             width: 84.2%;
             height: 380px;
             padding: 25px;
-            color: #f1efef;
+            color: #f1f1f1;
             font-size: 1.34rem;
             line-height: 30px;
             font-family: 'georgia';
