--- a/index.html
+++ b/index.html
@@ -1588,11 +1588,14 @@ font-size: 19px;
   line-height: 31px;
   text-align: left;
   padding: 20px;
-  color: #a8a8a8eb;  
+  color: #dcdcdc;
+  background: #c31250dc;
+  border: 0.45px solid #8f8f8f;
+  border-radius: 0.5rem;
 }
 
 .F2:hover{
-  color: #cbcacaeb;  
+  color: #fff;  
 }
 
 .footer2{
