--- a/index.html
+++ b/index.html
@@ -1815,16 +1815,16 @@ font-size: 19px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 60px;
-    height: 55px;
+    width: 64px;
+    height: 56px;
     border-radius: 50%;
     color: gold;
     font-family: 'arial narrow';
-    font-size: 13px;
+    font-size: 14px;
     padding: 2px;
-    background: #b31049;
+    background: #ba104b;
     margin-top: -12px;
-    margin-left: 2rem;
+    margin-left: 0.45rem;
     cursor: pointer;
    }
 
