--- a/index.html
+++ b/index.html
@@ -1826,6 +1826,7 @@ font-size: 19px;
     margin-top: -12px;
     margin-left: 0.45rem;
     cursor: pointer;
+    border: 0.13rem solid rgb(1, 1, 221);
    }
 
    .TYK1:hover{
