--- a/index.html
+++ b/index.html
@@ -1822,11 +1822,11 @@ font-size: 19px;
     font-family: 'arial narrow';
     font-size: 14px;
     padding: 2px;
-    background: #ba104b;
+    background: #b30f48;
     margin-top: -12px;
     margin-left: 0.45rem;
     cursor: pointer;
-    border: 0.13rem solid rgb(1, 1, 221);
+    border: 0.13rem solid rgb(2, 2, 228);
    }
 
    .TYK1:hover{
