--- a/index.html
+++ b/index.html
@@ -2294,7 +2294,7 @@ font-size: 19px;
               This website is in project. It will be dedicated to improve education, promote inclusion and protect rights of disabled people. Tiki N'Yiki through its Vision, focuses especially on DISABLED CHILDREN, their INCLUSION and EDUCATION in Burkina Faso in order to HELP them realize their DREAMS. One of the main leverages of dreaming is fundamentally to getting EDUCATED. 
               <br>
               <br>
-              It is not onely a great pleasure to have you here and wanting to learn more about realities of being, living as a disabled person but also and hopefully you'll become a relay and help to enhance inclusion and defend the rights of disabled people in the society if needed. <b style="align-items: center; color: rgb(5, 201, 255)">Thank you for your time and feedback !
+              It is not onely a great pleasure to have you here and wanting to learn more about realities of being, living as a disabled person but also and hopefully you'll become a relay and help to enhance inclusion and defend the rights of disabled people in the society if needed. <b style="align-items: center; color: #ff0">Thank you for your time and feedback !
 
             </div>
 
