--- a/index.html
+++ b/index.html
@@ -394,8 +394,8 @@
       width: 100%;
       height: 19px;
       background: transparent;  
-      color: #acabab;
-      font-family: 'Poppins';
+      color: rgb(160, 158, 158);
+      font-family: 'arial';
       font-size: 0.93rem;
       padding: 0.5rem;
       font-weight: bold;
@@ -1577,7 +1577,7 @@ font-size: 19px;
           justify-items: center;
           width: 100%;
           height: 256px;
-          background: #a91e4fef;
+          background: #971140f8;
           padding: 10px;
           font-size: 1.8rem;
           box-shadow: 0 0 0.2rem -0.25px rgba(185, 210, 208, 0.79);
@@ -2307,8 +2307,8 @@ color: #fff;
 <a href="file:///C:/Users/User/Documents/disabilitylife.html" target="_blank">
 
             <div class="navbar1">
-              <div class="ViD" style="font-family: 'Courier New', Courier, monospace; margin-top: 4px;">
-                <b style="font-family: 'Courier New', Courier, monospace">What it means to living as a disabled person ?</b>
+              <div class="ViD" style="font-family: 'helvetica'; line-height: 20px; margin-top: 4px;">
+                <b style="font-family: 'helvetica'">What it means to living as a disabled person ?</b>
                 <br>
                 Living as a disabled person is very challenging. Many discriminations on a daily basis and lots social bareers. Few opportunities and disabled people have to struggle more tougher to get theirs needs met. Where is their right to inclusiveness ?
               </div>
