--- a/index.html
+++ b/index.html
@@ -1435,7 +1435,7 @@ font-size: 18px;
             justify-content: center;
             justify-items: center;
             width: 100%;
-            height: 920px;
+            height: 970px;
             background: transparent;
             padding: 20px;
             color: #000;
@@ -1448,7 +1448,7 @@ font-size: 18px;
             justify-items: center;
             padding: 10px;
             width: 86.8%;
-            height: 480px;
+            height: 460px;
             background:rgb(182, 24, 79);
             border-radius: 0.15rem;
             margin-top: -5.5px;
@@ -1886,6 +1886,7 @@ color: #fff;
     justify-content: center;
     align-items: center;
     background-position: cover;
+    margin-top: -2rem;
 }
 
 .ttle-container{
