--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         justify-content: center;
         justify-items: center;
         width: 100%;
-        height: 2.55rem;
+        height: 2.45rem;
         padding-top: 0.4rem;
         padding-bottom: 0.45rem;
         word-spacing: 1px;
@@ -89,10 +89,9 @@
     }
 
     .Welcome:hover{
-      transition: 0.23s ease-in;
-      box-shadow: 0 -1.1px 0.2rem 1px #234cf0;
+      transition: 0.3s ease-in;
       width: 100%;
-      color: #000;
+      color: #fff;
     }
 
     .BF{
@@ -112,10 +111,9 @@
     }
 
     .BF:hover{
-      transition: 0.23s ease-in;
-      box-shadow: 0 -1.1px 0.2rem 1px #234cf0;
+      transition: 0.3s ease-in;
       width: 100%;
-      color: #000;
+      color: #fff;
     }
     
     .Asso{
@@ -135,10 +133,9 @@
     }
 
     .Asso:hover{
-      transition: 0.23s ease-in;
-      box-shadow: 0 -1.1px 0.2rem 1px #234cf0;
+      transition: 0.3s ease-in;
       width: 100%;
-      color: #000;
+      color: #fff;
     }
 
     .datime{
@@ -154,15 +151,14 @@
       font-size: 0.75rem;
       color: #d1d1d1;
       border-radius: 0.3rem;
-      margin-top: -0.65rem;
+      margin-top: -0.72rem;
       margin-left: 0.45rem;
     }
 
     .datime:hover{
-      transition: 0.23s ease-in;
-      box-shadow: 0 -1.1px 0.2rem 1px #234cf0;
+      transition: 0.3s ease-in;
       width: 100%;
-      color: #000;
+      color: #fff;
     }
 
     .navbar{
@@ -650,7 +646,7 @@ border: 0.15px solid #8f8f8ff9;
             color: #d9d9d9;
             background:rgb(182, 24, 79);
             border-radius: 0.15rem;
-            margin-top: -33px;
+            margin-top: -34px;
           }
 
           .KontenT:hover{
