--- a/index.html
+++ b/index.html
@@ -501,6 +501,7 @@
             cursor: pointer;
             margin-left: 2rem;
             margin-top: -2rem;
+            border-top: 0.5rem solid gold;
           }
 
           .T-Area:hover{
@@ -588,6 +589,7 @@
             color: #e8e7e7fa;
             background:rgb(182, 24, 79);
             cursor: pointer;
+            border-top: 0.5rem solid gold;
           }
           .Pic:hover{
            background: #fff;
@@ -1527,7 +1529,7 @@ font-size: 19px;
     
     }
     ::-webkit-scrollbar-track-piece{
-        background: rgba(1, 1, 203, 0.382);
+        background: rgba(160, 160, 161, 0.939);
         cursor: pointer;
   
     }
@@ -1582,9 +1584,11 @@ font-size: 19px;
 color: #909090de;
 font-family: Arial, Helvetica, sans-serif;
 font-size: 1.8rem;
-line-height: 31px;
+line-height: 30px;
 background: #f1f1f1;
 border-bottom: 1.5rem solid rgba(0, 179, 255, 0.911);
+border-bottom-left-radius: 10%;
+border-bottom-right-radius: 10%;
 }
 
 .footer1 img{
@@ -2309,7 +2313,7 @@ border-bottom: 1.5rem solid rgba(0, 179, 255, 0.911);
                 <b style="font-family: 'arial'; margin-top: 15px;">What it means to living as a disabled person ?</b>
               
 
-            <p style="color: rgba(37, 121, 177, 0.915) ; font-size: 21.3px; text-align: justify; line-height: 31.7px;">Living as a disabled person is very challenging. Over countless discriminations on a daily basis many disabled people have to struggle at least two times harder to fulfill or fail. This because of a toxic and exclusive culture that is misconceiving the image of disabled people - as negative in general without having to learn about their abilities and skills - is making their dreams more harder to realize. Sometimes it's been heard that disabled people are good for nothing. This is wrong and is a way to draw negativity into disability. The kind of propaganda is formatted in a whole mindset. But some people didn't get to know about disability and never want to know about it and they cannot imagine that disability is not destinity. So how can you do dear current user to help promote people living with disabilities ? Something has to get done because inclusion has not yet room for every disabled people even as human-beings. You should be one of the game-changers.</p>
+            <p style="color: rgba(37, 121, 177, 0.915) ; font-size: 21.3px; text-align: justify; line-height: 31.7px;">Living as a disabled person is very challenging but also learning. Over countless discriminations on a daily basis many disabled people have to struggle at least two times harder and find out ways to fulfill or fail. This because of a toxic and exclusive culture that is misconceiving the image of disabled people - as negative in general without having to know what are their abilities and skills - is making their dreams more harder to realize. Sometimes it's been heard that disabled people are good for nothing. This is wrong; it is painting negativity into disability. Kind of propaganda is formatted in the public mindset of thinking. If some people want to know about disability, they can but many of people never want to know about it so they cannot imagine that disability is not destinity. How can you do dear current user help promote and stand up for people living with disabilities ? Something has to get done because inclusion has not yet room for every disabled person worldwide. You may be one of the game-changers.</p>
               </div>
 
             </div>
