--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         font-family: 'georgia';
         font-size: 0.72rem;
         color: gold;
-        background: #0a1155db;
+        background: #080f4ae0;
     }
 
     .reader{
@@ -164,7 +164,7 @@
     .navbar{
       display: grid;
         grid-template-rows: 1fr 1fr;
-        row-gap: 0.35rem;
+        row-gap: 0.39rem;
                  justify-content: space-between;
                  justify-items: center;
                  background: #fff;
@@ -192,7 +192,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
-            height: 25px;
+            height: 32.5px;
             cursor: pointer;
             font-family: georgia;
             font-size: 16px;
@@ -214,7 +214,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
-            height: 25px;
+            height: 32.5px;
             cursor: pointer;
             font-family: georgia;
             font-size: 16px;
@@ -235,7 +235,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
-            height: 25px;
+            height: 32.5px;
             cursor: pointer;
             font-family: georgia;
             font-size: 16px;
@@ -256,7 +256,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
-            height: 25px;
+            height: 32.5px;
             cursor: pointer;
             font-family: georgia;
             font-size: 16px;
@@ -277,7 +277,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
-            height: 25px;
+            height: 32.5px;
             cursor: pointer;
             font-family: georgia;
             font-size: 16px;
@@ -298,7 +298,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
-            height: 25px;
+            height: 32.5px;
             cursor: pointer;
             font-family: georgia;
             font-size: 16px;
@@ -319,7 +319,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
-            height: 25px;
+            height: 32.5px;
             cursor: pointer;
             font-family: georgia;
             font-size: 16px;
@@ -340,7 +340,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
-            height: 25px;
+            height: 32.5px;
             cursor: pointer;
             font-family: georgia;
             font-size: 16px;
@@ -501,7 +501,7 @@
             cursor: pointer;
             margin-left: 2rem;
             margin-top: -2rem;
-            border-top: 0.23rem solid gold;
+            border-top: 0.24rem solid gold;
           }
 
           .T-Area:hover{
@@ -589,7 +589,7 @@
             color: #e8e7e7fa;
             background:rgb(182, 24, 79);
             cursor: pointer;
-            border-top: 0.23rem solid gold;
+            border-top: 0.24rem solid gold;
           }
           .Pic:hover{
            background: #fff;
@@ -1835,7 +1835,7 @@ border-bottom-right-radius: 11%;
     margin-top: -10px;
     margin-left: 0.4rem;
     cursor: pointer;
-    border: 0.1rem solid gold;
+    border: 0.15rem solid rgb(15, 15, 126);
     
    }
 
