--- a/index.html
+++ b/index.html
@@ -501,7 +501,6 @@
             cursor: pointer;
             margin-left: 2rem;
             margin-top: -2rem;
-            border-top: 0.24rem solid gold;
           }
 
           .T-Area:hover{
@@ -586,14 +585,14 @@
             line-height: 21px;
             font-family: 'georgia';
             font-size: 17px;
-            color: #e8e7e7fa;
+            color: #b8b8b8fa;
             background:rgb(182, 24, 79);
             cursor: pointer;
-            border-top: 0.24rem solid gold;
+  
           }
           .Pic:hover{
            background: #fff;
-           color: #595959;
+           color: #505050;
            border: 0.12rem solid #000;
            transition: 0.2s ease-in;
                     }
@@ -2315,7 +2314,7 @@ border-bottom-right-radius: 11%;
               
               <br>
               <br>
-            <p style="color: rgba(37, 121, 177, 0.915) ; font-size: 21.3px; text-align: justify; line-height: 31.7px;">Living as a disabled person is very challenging in one hand but is also learning in the other hand. Over countless discriminations on a daily basis many disabled people are struggling at least two times harder to find out ways to fulfill or fail. This because of a toxic and exclusive culture that is misconceiving the image of disabled people - as negative in general without having to know what are their abilities and skills - is making their dreams more harder to realize. Sometimes it's been heard that disabled people are good for nothing. This is wrong; it is painting negativity into disability. Kind of propaganda is formatted in the public mindset of thinking. If some people want to know about disability, they can but many of people never want to know about it so they cannot imagine that disability is not destinity. How can you do dear current user help promote and stand up for people living with disabilities ? Something has to get done because inclusion has not yet room for every disabled person worldwide. You may be one of the game-changers.</p>
+            <p style="color: rgba(34, 114, 167, 0.963) ; font-size: 21.3px; text-align: justify; line-height: 31.7px;">Living as a disabled person is very challenging in one hand but is also learning in the other hand. Over countless discriminations on a daily basis many disabled people are struggling at least two times harder to find out ways to fulfill or fail. This because of a toxic and exclusive culture that is misconceiving the image of disabled people - as negative in general without having to know what are their abilities and skills - is making their dreams more harder to realize. Sometimes it's been heard that disabled people are good for nothing. This is wrong; it is painting negativity into disability. Kind of propaganda is formatted in the public mindset of thinking. If some people want to know about disability, they can but many of people never want to know about it so they cannot imagine that disability is not destinity. How can you do dear current user help promote and stand up for people living with disabilities ? Something has to get done because inclusion has not yet room for every disabled person worldwide. You may be one of the game-changers.</p>
               </div>
 
             </div>
@@ -2383,7 +2382,7 @@ border-bottom-right-radius: 11%;
 
               <div class="KontenT">
 
-                <a href="https://en.wikipedia.org/wiki/Stephen_Hawking" target="_blank">
+                <a href="https://www.hawking.org.uk" target="_blank">
 
                 <div class="Portray">
                   <figure>
@@ -2393,7 +2392,7 @@ border-bottom-right-radius: 11%;
             </div>
               </a>
 
-              <a href="https://en.wikipedia.org/wiki/Stephen_Hawking" target="_blank">
+              <a href="https://www.hawking.org.uk" target="_blank">
 
                 <div class="KonT"><em>"My advice to other disabled people would be, 
                   concentrate on things your disability doesn't prevent you doing well, 
