--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             background: transparent;
             padding: 10px;
             color: #000;
-            margin-top: 3.6rem;
+            margin-top: 4rem;
            
           }
 
@@ -496,7 +496,7 @@
             line-height: 21px;
             font-family: 'georgia';
             font-size: 17px;
-            color: #c7c6c6fa;
+            color: #f1f1f1;
             background:rgb(182, 24, 79);
             cursor: pointer;
             margin-left: 2rem;
@@ -533,7 +533,7 @@
             background: transparent;
             width: 100%;
             height: 60px;
-            color: #e8e7e7fa;
+            color: #f1f1f1;
             padding: 5px;
             font-family: 'georgia';
             font-size: 18px;
@@ -541,7 +541,7 @@
           }
 
           .Drum:hover{
-            color: #5d5d5df6;
+            color: #464646f6;
           }
 
           .PHCaption{
@@ -585,7 +585,7 @@
             line-height: 21px;
             font-family: 'georgia';
             font-size: 17px;
-            color: #b8b8b8fa;
+            color: #e6e5e5fb;
             background:rgb(182, 24, 79);
             cursor: pointer;
   
