--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
           }
 
           .myDiv1:hover{
-      border-bottom: 0.35rem solid #00c2d0;
-      color: #00c2d0;
+      border-bottom: 0.35rem solid #000;
+      color: #000;
       transition: 0.2s ease-in;
           }
 
@@ -266,8 +266,8 @@
           }
 
           .myDiv3:hover{
-            border-bottom: 0.35rem solid rgb(255, 0, 221);
-      color: rgb(255, 0, 221);
+            border-bottom: 0.35rem solid rgb(199, 4, 173);
+      color: rgb(199, 4, 173);
       transition: 0.2s ease-in;
           }
 
@@ -287,8 +287,8 @@
           }
 
           .myDiv4:hover{
-            border-bottom: 0.35rem solid rgb(255, 186, 209);
-      color: #fff;
+            border-bottom: 0.35rem solid rgb(177, 17, 70);
+      color: rgb(177, 17, 70);
       transition: 0.2s ease-in;
           }
 
@@ -308,29 +308,8 @@
           }
 
           .myDiv5:hover{
-            border-bottom: 0.35rem solid rgb(255, 95, 37);
-      color: rgb(255, 95, 37);
-      transition: 0.2s ease-in;
-          }
-
-          .myDiv4{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 32.5px;
-            cursor: pointer;
-            font-family: georgia;
-            font-size: 16px;
-            border: 0.3rem solid transparent;
-            color: #717070ef;
-            background: transparent;
-          }
-
-          .myDiv4:hover{
-            border-bottom: 0.35rem solid rgb(6, 174, 57);
-      color: rgb(6, 174, 57);
+            border-bottom: 0.35rem solid rgb(255, 73, 37);
+      color: rgb(255, 73, 37);
       transition: 0.2s ease-in;
           }
 
@@ -350,11 +329,11 @@
           }
 
           .myDiv6:hover{
-      border-bottom: 0.35rem solid rgb(240, 99, 6);
-      color: rgb(240, 99, 6);
+            border-bottom: 0.35rem solid rgb(17, 160, 48);
+      color: rgb(17, 160, 48);
       transition: 0.2s ease-in;
-      
           }
+
 
           .Unyfy{
             display: grid;
