--- a/index.html
+++ b/index.html
@@ -1602,9 +1602,9 @@ border-bottom-right-radius: 11%;
   height: 493px;
   padding: 10px;
   line-height: 28px;
-  font-family: 'courrier new';
-  font-size: 21.45px;
-  color: #777777fd;
+  font-family: 'arial';
+  font-size: 20px;
+  color: #2a2a2af3;
   text-align: justify;
   background: transparent;
   border-bottom: 0.3rem solid red;
