--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
             background: transparent;
             padding: 10px;
             color: #000;
-            margin-top: 4rem;
+            margin-top: 1.15rem;
            
           }
 
@@ -695,8 +695,8 @@ justify-items: center;
 width: 88%;
 height: 245px;
 padding: 10px;
-color: #dfdedeed;
-background: #d01355dc;
+color: #dfdedef4;
+background: #ce1354e4;
 box-shadow: 0 0 0.25rem -0.25px rgba(227, 253, 251, 0.883);
 border-radius: 1rem;
 font-family: 'georgia';
@@ -757,8 +757,8 @@ justify-items: center;
 width: 88%;
 height: 245px;
 padding: 10px;
-color: #dfdedeed;
-background: #d01355dc;
+color: #dfdedef4;
+background: #ce1354e4;
 box-shadow: 0 0 0.25rem -0.25px rgba(227, 253, 251, 0.883);
 border-radius: 1rem;
 font-family: 'georgia';
@@ -786,8 +786,8 @@ justify-items: center;
 width: 88%;
 height: 245px;
 padding: 10px;
-color: #dfdedeed;
-background: #d01355dc;
+color: #dfdedef4;
+background: #ce1354e4;
 box-shadow: 0 0 0.25rem -0.25px rgba(227, 253, 251, 0.883);
 border-radius: 1rem;
 font-family: 'georgia';
@@ -1559,12 +1559,12 @@ font-size: 19px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-color: #7e7e7ede;
+color: #d22a65f7;
 font-family: Helvetica;
 font-size: 1.79rem;
 line-height: 30px;
 background: #f1f1f1;
-border-bottom: 1.2rem solid rgba(0, 183, 255, 0.941);
+border-bottom: 1.1rem solid rgba(0, 187, 255, 0.941);
 border-bottom-left-radius: 11%;
 border-bottom-right-radius: 11%;
 }
@@ -1607,7 +1607,7 @@ border-bottom-right-radius: 11%;
   color: #2a2a2af3;
   text-align: justify;
   background: transparent;
-  border-bottom: 0.3rem solid red;
+  border-bottom: 1.6rem solid #c3225af1;
 }
 
     .content a:hover{
@@ -2293,7 +2293,7 @@ border-bottom-right-radius: 11%;
               
               <br>
               <br>
-            <p style="color: rgba(34, 114, 167, 0.963) ; font-size: 21.3px; text-align: justify; line-height: 31.7px;">Living as a disabled person is very challenging in one hand but is also learning in the other hand. Over countless discriminations on a daily basis many disabled people are struggling at least two times harder to find out ways to fulfill or fail. This because of a toxic and exclusive culture that is misconceiving the image of disabled people - as negative in general without having to know what are their abilities and skills - is making their dreams more harder to realize. Sometimes it's been heard that disabled people are good for nothing. This is wrong; it is painting negativity into disability. Kind of propaganda is formatted in the public mindset of thinking. If some people want to know about disability, they can but many of people never want to know about it so they cannot imagine that disability is not destinity. How can you do dear current user help promote and stand up for people living with disabilities ? Something has to get done because inclusion has not yet room for every disabled person worldwide. You may be one of the game-changers.</p>
+            <p style="color: rgba(35, 126, 172, 0.97) ; font-size: 21.3px; text-align: justify; line-height: 31.7px;">Living as a disabled person is very challenging in one hand but is also learning in the other hand. Over countless discriminations on a daily basis many disabled people are struggling at least two times harder to find out ways to fulfill or fail. This because of a toxic and exclusive culture that is misconceiving the image of disabled people - as negative in general without having to know what are their abilities and skills - is making their dreams more harder to realize. Sometimes it's been heard that disabled people are good for nothing. This is wrong; it is painting negativity into disability. Kind of propaganda is formatted in the public mindset of thinking. If some people want to know about disability, they can but many of people never want to know about it so they cannot imagine that disability is not destinity. How can you do dear current user help promote and stand up for people living with disabilities ? Something has to get done because inclusion has not yet room for every disabled person worldwide. You may be one of the game-changers.</p>
               </div>
 
             </div>
