--- a/index.html
+++ b/index.html
@@ -1570,6 +1570,10 @@ border-bottom-left-radius: 11%;
 border-bottom-right-radius: 11%;
 }
 
+.ViD:hover{
+  background: #fff;
+}
+
 .footer1 img{
    width: 300px;
    height: 230px;
