--- a/index.html
+++ b/index.html
@@ -1603,12 +1603,12 @@ border-bottom-right-radius: 11%;
   justify-content: center;
   align-items: center;
   width: 80%;
-  height: 493px;
+  height: 495px;
   padding: 10px;
-  line-height: 28px;
-  font-family: 'arial';
-  font-size: 20px;
-  color: #2a2a2af3;
+  line-height: 26px;
+  font-family: 'georgia';
+  font-size: 22px;
+  color: #2c2c2cf3;
   text-align: justify;
   background: transparent;
   border-bottom: 1.6rem solid #c3225af1;
